[package]
name = "oro"
version = "0.1.0"
authors = ["Ryan Williams <git@ryan.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpulse-simple-binding = "~2.20.1"
libpulse-binding = "~2.22.0"
mutunga = { git = "https://github.com/ryanw/mutunga-rs" }
